# ros_based_car_lane_assignment

./: CMakeLists.txt  Changelog.md  README.md  package.xml
include/lane_assignment/: cLaneAssignment.h
msgs/inputBus_msgs/: CMakeLists.txt  package.xml
msgs/inputBus_msgs/msg/: LaneMarking.msg  LaneMarkingArray.msg  Lantern.msg  SFreeSpaceExt.msg  SFreeSpacesExtended.msg  SPolygonArray_FSE.msg  SPolygon_FSE.msg  SensorDetectedObject.msg  SensorDetectedObjectList.msg  SensorDetectedTsrList.msg  Stopline.msg  TSR.msg  TrafficLamp.msg  TrafficLight.msg  TrafficLightArray.msg  TrafficLightGeometry.msg  TrafficLightSensor.msg  TrafficLightV2x.msg  TrafficSign.msg  TrafficSignsRec.msg  TrafficSignsRecArray.msg  anavsStatus.msg  box.msg  candata.msg  electricVehicleState.msg  stoplinesArray.msg  stoplines_nvidia.msg  wheelspeed.msg  xsensStatusWord.msg
msgs/outputBus_msgs/: CMakeLists.txt  CMakeLists.txt.orig  Changelog.md  package.xml
msgs/outputBus_msgs/msg/: CollectionOfFeature.msg  CollectionOfFeatureList.msg  Feature.msg  LaneValidation.msg  NodeStateReport.msg  PassengerCountMsg.msg  RouteInformationMsg.msg  SensorDetectedObject.msg  SensorDetectedObjectList.msg  TransportRoute.msg  box.msg
src/: cLaneAssignment.cpp  lane_assignment_node.cpp
test/: testLaneAssignment.cpp  testLaneAssignment.test
