<?xml version="1.0"?>
<package format="2">
  <name>outputBus_msgs</name>
  <version>1.4.2</version>
  <description>The outputBus_msgs package</description>

  <maintainer email="zeeshan.karamatsatti@gmail.com">zeeshan</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>
